fixed running only from powershell